# sg_engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: pnglibconf.h
include/GoonEngine/: Camera.h  SdlSurface.h  SdlWindow.h  Shader.h  Sprite.h  Texture2D.h  TileSheet.h  clock.h  color.h  debug.h  easing.h  game.h  gnpch.h  joystick.h  keyboard.h  point.h  rectangle.h  test.h  text.h  utils.h  window.h
include/GoonEngine/content/: bgm.h  content.h  font.h  image.h  sfx.h  text.h  textv2.h
include/GoonEngine/input/: InputEvent.h  joystick.h  keyboard.h
include/GoonEngine/internal/: clock.h
include/GoonEngine/prim/: color.h  point.h  rectangle.h  vec2.h
include/GoonEngine/primitives/: point.h
include/GoonEngine/ui/: text.h
include/GoonPhysics/: GoonPhysics.h  aabb.h  bb.h  body.h  boxCollider.h  gravity.h  overlap.h  scene.h  vec.h
src/GoonEngine/: Camera.c  SdlSurface.c  Shader.c  Sprite.c  Texture2D.c  TileSheet.c  clock.c  debug.c  easing.c  game.c  joystick.c  keyboard.c  test.c  text.c  utils.c  window.c
src/GoonEngine/content/: bgm.c  content.c  font.c  image.c  sfx.c  text.c  textv2.c
src/GoonEngine/input/: joystick.c  keyboard.c
src/GoonEngine/internal/: clock.c
src/GoonEngine/primitives/: point.c  rectangle.c
src/GoonEngine/scripting/: SdlSurface.c  SdlWindow.c
src/GoonEngine/ui/: text.c
src/GoonPhysics/: aabb.c  bb.c  body.c  boxCollider.c  gravity.c  overlap.c  scene.c  vec.c
src/ini/: ini.c
